# android-view

./: .gitignore  Cargo.toml  README.md  settings.gradle
app/: build.gradle
app/src/main/java/org/linebender/android/: DemoActivity.java  DemoView.java  RustInputConnection.java  RustView.java
app/src/main/java/org/linebender/android/viewdemo/: DemoActivity.java  DemoView.java
demo/: Cargo.toml
demo/src/: access_ids.rs  lib.rs  text.rs
masonry/: Cargo.toml
masonry-app/: build.gradle
masonry-app/src/main/: AndroidManifest.xml
masonry-app/src/main/java/org/linebender/android/masonrydemo/: DemoActivity.java  DemoView.java
masonry-demo/: Cargo.toml
masonry-demo/src/: lib.rs
masonry/src/: app_driver.rs  lib.rs
src/: accessibility.rs  binder.rs  bundle.rs  callback_ctx.rs  context.rs  events.rs  graphics.rs  ime.rs  lib.rs  peer_result.rs  surface.rs  util.rs  view.rs  view_configuration.rs
