[workspace]
members = [".", "demo"]

[package]
name = "android-view"
version = "0.1.0"
edition = "2024"

[dependencies]
dpi = { version = "0.1.2", default-features = false }
jni = "0.21.1"
ndk = "0.9.0"
num_enum = "0.7.3"
smallvec = "1.15.0"
ui-events = "0.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
accesskit = { git = "https://github.com/AccessKit/accesskit", branch = "android-less-java" }
