[package]
name = "android-view-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
accesskit = "0.18"
android-view = { path = ".." }
android_logger = "0.15.0"
anyhow = "1.0.96"
log = "0.4.26"
parley = { git = "https://github.com/linebender/parley", features = ["accesskit"] }
peniko = { version = "0.3.1", default-features = false }
pollster = "0.4.0"
vello = "0.4.0"
