[package]
name = "android-view-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
accesskit = "0.19.0"
accesskit_android = "0.2.0"
android-view = { path = ".." }
android_logger = "0.15.0"
anyhow = "1.0.96"
log = "0.4.26"
parley = { version = "0.5.0", features = ["accesskit"] }
peniko = { version = "0.4.0", default-features = false }
pollster = "0.4.0"
ui-events = { git = "https://github.com/endoli/ui-events", rev = "6382e63" }
vello = "0.5.0"

# Send tracing events to Android GPU inspector, for profiling
tracing_android_trace = "0.1.1"
tracing-subscriber = "0.3.19"
# Make events recorded with profiling (e.g. in wgpu) visible to Android GPU inspector
profiling = { version = "1.0.16", features = ["profile-with-tracing"] }
# Make events recorded to `tracing` visible in logcat
tracing = { version = "0.1.38", features = ["log-always"] }
