[package]
name = "android-view-masonry-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
android-view = { path = ".." }
masonry = { git = "https://github.com/xorgy/xilem", branch = "ui-events-0.2.0" }
masonry_android = { path = "../masonry" }

# Send tracing events to Android GPU inspector, for profiling
tracing_android_trace = "0.1.1"
tracing-subscriber = "0.3.19"
# Make events recorded with profiling (e.g. in wgpu) visible to Android GPU inspector
profiling = { version = "1.0.16", features = ["profile-with-tracing"] }
# Make events recorded to `tracing` visible in logcat
tracing = { version = "0.1.38", features = ["log-always"] }
